# rSoccer

./: .gitignore  CITATION.cff  LICENSE  README.md  agent.py  ddpg.py  ddpg_stableBaselines.py  grSimClient.py  max_ball_grad_test.py  networks.py  normalization_test.py  pyproject.toml  recompensas_ddpg_dranaju_VSS-tcc_progressivo-v0_1700744674.csv  saved_networks  setup.py  single_agent_soccer_env_wrapper.py  speed_estimator.py  spline.py  test.py  training.py  utils.py  vss_agent.py  vss_soccer.py
.github/: contributing.md
.github/workflows/: manual-pypi-publish.yml  (+5 more)
agents/: test.py
deepvss/: setup.py
envs/: README.md  test.py
gym_real_soccer/: __init__.py  kalman_filter_2d.py  kalman_parser.py  nrfparser.py  sslparser.py  vss_soccer_real.py  vss_soccer_real_continuous.py  vssparser.py
gym_soccer/: __init__.py  sim_parser.py  state_pb2.py  vss_soccer_sim.py  vss_soccer_sim_continuous.py  vss_soccer_sim_continuous_ma.py
gym_ssl/: __init__.py  util.py  utils.py
gym_ssl.egg-info/: PKG-INFO  SOURCES.txt
gym_vss/: __init__.py  fira_wrapper.py  multi_agent_soccer_env_wrapper.py  single_agent_soccer_env_wrapper.py  vss_agent.py  vss_sdk_wrapper.py  vss_soccer.py
pb/: grSim_Commands_pb2.py  grSim_Packet_pb2.py  grSim_Replacement_pb2.py  messages_robocup_ssl_detection_pb2.py  messages_robocup_ssl_geometry_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_robot_status_pb2.py  messages_robocup_ssl_wrapper_pb2.py
rc_gym/: __init__.py
requirements/: rl_tf.yml  rl_torch.yml  setup.py
rl_utils/: replayBuffer.py
rsoccer_gym/: __init__.py
(+412 files in other folders)
